[project]
name = "image-guardrails-demo"
version = "0.1.0"
description = "A local-first image guardrails pipeline for validating and sanitizing images before AI processing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "python-magic>=0.4.27",
    "opennsfw2>=0.10.0",
    "tensorflow>=2.13.0",
    "opencv-python>=4.8.0",
    "presidio-analyzer>=2.2.0",
    "presidio-image-redactor>=0.0.48",
    "pytesseract>=0.3.10",
    "imagehash>=4.3.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
demo = [
    "streamlit>=1.28.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["guard_image.py", "demo_app.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
